Removed CurrentWorkingDirectory Class and updated the config class file and all test cases

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -152,14 +152,14 @@
           <div class="suite-OnlineCalculatorSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">onlinecalculator.DivideByZero</span>
+              <span class="class-name">onlinecalculator.Division</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="DivideByZero">
-                  </a> <!-- DivideByZero -->
-                  <span class="method-name">DivideByZero</span>
+                  <a name="Divison">
+                  </a> <!-- Divison -->
+                  <span class="method-name">Divison</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -182,14 +182,14 @@
           <div class="suite-OnlineCalculatorSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">onlinecalculator.Division</span>
+              <span class="class-name">onlinecalculator.DivideByZero</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Divison">
-                  </a> <!-- Divison -->
-                  <span class="method-name">Divison</span>
+                  <a name="DivideByZero">
+                  </a> <!-- DivideByZero -->
+                  <span class="method-name">DivideByZero</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -314,38 +314,38 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'DivideByZero')
-data.setCell(0, 2, 'onlinecalculator.DivideByZero')
-data.setCell(0, 3, 15076);
+data.setCell(0, 1, 'Divison')
+data.setCell(0, 2, 'onlinecalculator.Division')
+data.setCell(0, 3, 10860);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Multiplication')
-data.setCell(1, 2, 'onlinecalculator.Multiplication')
-data.setCell(1, 3, 13085);
+data.setCell(1, 1, 'DivideByZero')
+data.setCell(1, 2, 'onlinecalculator.DivideByZero')
+data.setCell(1, 3, 10737);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ClearButton')
-data.setCell(2, 2, 'onlinecalculator.ClearButton')
-data.setCell(2, 3, 11774);
+data.setCell(2, 1, 'Multiplication')
+data.setCell(2, 2, 'onlinecalculator.Multiplication')
+data.setCell(2, 3, 8773);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Addition')
-data.setCell(3, 2, 'onlinecalculator.Addition')
-data.setCell(3, 3, 11113);
+data.setCell(3, 1, 'NegativeValues')
+data.setCell(3, 2, 'onlinecalculator.NegativeValues')
+data.setCell(3, 3, 6184);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'Divison')
-data.setCell(4, 2, 'onlinecalculator.Division')
-data.setCell(4, 3, 10761);
+data.setCell(4, 1, 'Addition')
+data.setCell(4, 2, 'onlinecalculator.Addition')
+data.setCell(4, 3, 5454);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'NegativeValues')
-data.setCell(5, 2, 'onlinecalculator.NegativeValues')
-data.setCell(5, 3, 5994);
+data.setCell(5, 1, 'Subtraction')
+data.setCell(5, 2, 'onlinecalculator.Subtraction')
+data.setCell(5, 3, 5366);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'Subtraction')
-data.setCell(6, 2, 'onlinecalculator.Subtraction')
-data.setCell(6, 3, 5707);
+data.setCell(6, 1, 'ClearButton')
+data.setCell(6, 2, 'onlinecalculator.ClearButton')
+data.setCell(6, 3, 5168);
 window.suiteTableData['OnlineCalculatorSuite']= { tableData: data, tableDiv: 'times-div-OnlineCalculatorSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 52 seconds</span>
               <div id="times-div-OnlineCalculatorSuite">
               </div> <!-- times-div-OnlineCalculatorSuite -->
             </div> <!-- times-div -->
@@ -381,42 +381,42 @@ return data;
               <div class="chronological-class-name">onlinecalculator.Addition</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Addition</span>
-                <span class="method-start">13088 ms</span>
+                <span class="method-start">8777 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">onlinecalculator.Division</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Divison</span>
-                <span class="method-start">24202 ms</span>
+                <span class="method-start">14233 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">onlinecalculator.Subtraction</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Subtraction</span>
-                <span class="method-start">34964 ms</span>
+                <span class="method-start">25095 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">onlinecalculator.ClearButton</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">ClearButton</span>
-                <span class="method-start">40672 ms</span>
+                <span class="method-start">30462 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">onlinecalculator.NegativeValues</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">NegativeValues</span>
-                <span class="method-start">52447 ms</span>
+                <span class="method-start">35632 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">onlinecalculator.DivideByZero</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">DivideByZero</span>
-                <span class="method-start">58442 ms</span>
+                <span class="method-start">41817 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
