--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="onlinecalculator.AdditionMultiplication" class="method navigator-link" hash-for-method="AdditionMultiplication">AdditionMultiplication</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="onlinecalculator.Addition" class="method navigator-link" hash-for-method="Addition">Addition</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">onlinecalculator.AdditionMultiplication</span>
+              <span class="class-name">onlinecalculator.Addition</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AdditionMultiplication">
-                  </a> <!-- AdditionMultiplication -->
-                  <span class="method-name">AdditionMultiplication</span>
+                  <a name="Addition">
+                  </a> <!-- Addition -->
+                  <span class="method-name">Addition</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/j3/t8txl8q13r90yj3sr72hpc6r0000gn/T/testng-eclipse-193362503/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/j3/t8txl8q13r90yj3sr72hpc6r0000gn/T/testng-eclipse--1079807339/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;onlinecalculator.AdditionMultiplication&quot;/&gt;
+      &lt;class name=&quot;onlinecalculator.Addition&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'AdditionMultiplication')
-data.setCell(0, 2, 'onlinecalculator.AdditionMultiplication')
-data.setCell(0, 3, 10718);
+data.setCell(0, 1, 'Addition')
+data.setCell(0, 2, 'onlinecalculator.Addition')
+data.setCell(0, 3, 28524);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +221,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">onlinecalculator.AdditionMultiplication</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">onlinecalculator.Addition</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">AdditionMultiplication</span>
+                <span class="method-name">Addition</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
